# HW_web

./: README.md
home_work_10_web/: LICENSE.txt  README.md  pyproject.toml
home_work_10_web/quotes/: get_data_from_mongo.py  load_authors_to_db.py  load_quotes_to_db.py  load_tags_to_db.py
home_work_11_web/: README.md  config.ini  main.py  pyproject.toml
home_work_11_web/alembic/: env.py
home_work_11_web/src/: schemas.py
home_work_12_web/: README.md  main.py  pyproject.toml
home_work_12_web/src/: schemas.py
home_work_13_web/: README.md
home_work_13_web/hw_part_1/: main.py  pyproject.toml
home_work_13_web/hw_part_2/: pyproject.toml
home_work_13_web/hw_part_2/quotes/quotesapp/: forms.py  urls.py  views.py
home_work_13_web/hw_part_2/quotes/quotesapp/migrations/: 0001_initial.py
home_work_13_web/hw_part_2/quotes/users/: urls.py  views.py
home_work_14_web/: README.md  main.py  pyproject.toml
home_work_14_web/src/: schemas.py
home_work_14_web/tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
home_work_1_web/: Bot.py  uml_all.drawio  uml_all.html
home_work_2_web/: Dockerfile  pyproject.toml  setup.py
home_work_2_web/powerhouse_helper/: Address_Book_Handler.py  Note.py  Note_Book_Handler.py  Snake.py  Sort_Files.py  addressbook.py  addressbook_data.py  main.py  Сalculator.py
home_work_3_web/: factorize.py
home_work_4_web/: Dockerfile  README.md  ete.py  main.py  pyproject.toml  requirements.txt
home_work_5_web/: README.md  all_currency.txt  exchange.py  index.html  pyproject.toml  requirements.txt  server.py
home_work_6_web/home_work_sql/: README.md  main.py
home_work_7_web/: Pipfile  main.py  pyproject.toml
home_work_7_web/alembic/: env.py
home_work_7_web/alembic/versions/: 3e8ad7ad36ea_init.py
home_work_7_web/classes/: __init__.py  serviceBot.py
home_work_7_web/src/: __init__.py  connect.py  models.py  seeds.py  selects.py  update_data.py
home_work_8_web/: Pipfile  main.py  settings.ini
home_work_8_web/mongo/: __init__.py  models_message.py  mongo_connect.py  seeds.py  selects.py
home_work_8_web/rabbitMQ/: consumer_email.py  consumer_sms.py  producer.py
home_work_8_web/redis_cache/: __init__.py  connect.py
home_work_9_web/: main.py  pyproject.toml  requiremants.txt  settings.ini
home_work_9_web/beautiful_soup/: __init__.py  soup.py
home_work_9_web/data/: authors.json
home_work_9_web/my_scrapy/my_scrapy/: settings.py
home_work_9_web/my_scrapy/my_scrapy/spiders/: __init__.py  author_spider.py  quotes_spider.py  start_scrapy.py
home_work_9_web/src/: __init__.py  models.py  mongo_connect.py  seeds.py
(+52 files in other folders)
