[tool.poetry]
name = "home-work-4"
version = "0.1.0"
description = ""
authors = ["KetrinDG <degtyareva.ev1@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_4"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
