[tool.poetry]
name = "home-work-7-web"
version = "0.1.0"
description = ""
authors = ["KetrinDG <degtyareva.ev1@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_7_web"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.10.4"
sqlalchemy = "^2.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
