[tool.poetry]
name = "hw-10-try-3"
version = "0.1.0"
description = ""
authors = ["KetrinDG <degtyareva.ev1@gmail.com>"]
readme = "README.md"
packages = [{ include = "home_work_13_web" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
psycopg2 = "^2.9.5"
pymongo = { extras = ["srv", "tls"], version = "^4.3.3" }
mongoengine = "^0.26.0"
sqlalchemy = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
